Removed extra comma.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "authors": [
 		{
-			"name": "Marco Ceppi",
+			"name": "Marco Ceppi"
 		},
         {
             "name": "Cristiano Diniz da Silva",
